# Phase-III-Todo-AI-Chatbot

./: .gitignore  GEMINI.md  cleanupdb.py  main.py  package-lock.json  run.md  start_servers.bat  test_api_key.py  tmpclaude-b043-cwd
.claude/: README.md  claude-config.yaml  frontend-ui-agent.yaml  settings.local.json
.claude/skills/: component-creation.skill  responsive-design.skill  theme-management.skill  ui-enhancements.skill
.spec-kit/: config.yaml
.specify/memory/: agent-context-claude.md  constitution.md
ai-agent/: agent.py  main.py  requirements.txt
ai-agent/skills/: add_task_skill.py  complete_task_skill.py  delete_task_skill.py  list_tasks_skill.py  update_task_skill.py
backend/: README.md  main.py  pyproject.toml  pytest.ini  schemas.py  seed-user.py  server_debug.py  todo.db
backend/core/: __init__.py  config.py  db.py  jwt_auth.py
backend/migrations/: initial_migration.py
backend/models/: accounts.py  conversation.py  session.py  task.py  user.py  verification.py
backend/routes/: __init__.py  auth.py  chat.py  tasks.py
backend/services/: __init__.py  auth_service.py  task_service.py  user_service.py
frontend/: .gitignore  package-lock.json  package.json  readme.md  tailwind.config.js  vercel.json
history/adr/: 001-core-application-architecture-for-phase-1.md  (+4 more)
mcp-server/: .gitignore  http_wrapper.py  main.py  requirements.txt  stdio_main.py  tools.py
specs/: constitution.md  sp.specify
src/: cli.py  models.py  services.py  sp.implement
tests/: test_api_endpoints.bat  test_api_endpoints.sh  test_services.py
(+120 files in other folders)
